Closed Bug 96367 Opened 24 years ago Closed 24 years ago

[FIX]One radiobutton is now checked by default, also resets RBS when printing

Categories

(Core :: Layout: Form Controls, defect, P1)

x86
Windows 2000
defect

Tracking

()

VERIFIED FIXED
mozilla0.9.4

People

(Reporter: bugzilla, Assigned: rods)

References

Details

(Keywords: topembed)

Attachments

(1 file)

In 2001082109, one radiobutton is now checked by default. IE and 4.x don't do this. Was this deliberate?
Yes, this is "Standard" or "Strict" behavior http://www.w3.org/TR/html4/interact/forms.html#radio But since IE doesn't check the first item I can turn this off.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Oops, didn't mean to to makr fixed.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Status: REOPENED → ASSIGNED
Attached patch patchSplinter Review
Keywords: topembed
r=timeless
This bug is related to Bug 580002, now that we do standard mode the Radios get reset when the page is printed, this is very bad.
Severity: normal → critical
Priority: -- → P1
Summary: One radiobutton is now checked by default → [FIX]One radiobutton is now checked by default, also resets RBS when printing
Target Milestone: --- → mozilla0.9.4
Wouldn't it be better to get the compatibility mode from aPresContext and leave this behavior enabled in standard mode?
I don't think we want to reset the radios when printing in any mode - is that what the patch is fixing?
Looks like there is no reason to auto-check one of the radios in either mode, since there is no spec that says to do it and no browsers that do it. And I see now that the printing safety check was just put in in case we ever decide TO check one of the radios by default. sr=attinasi
Why the addition of code within |#if 0|?
The code inside the #if 0 fixes a major bug (related to Bug 58002). So I am adding the fix now, so if the RFC ever becomes part of the spec we can just go in and turn this on and it will work.
ok, a=dbaron on behalf of drivers
*** Bug 90874 has been marked as a duplicate of this bug. ***
fixed on branch and tip
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
I still see the default selection in an 8/24 build.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
I'm also seeing this with the 2001082506 x86 Linux build. The first radio button is always preselected. For example, going to <http://www.hotornot.com/>, the radio button for "1" is preselected.
I checked in some code that I was using for debugging, not the actual fix. It is checked in now. fixed
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
verified fixed on build ID: 2001-08-29-11trunk - window2000. The radiobutton does not have a default selection in either of the modes.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: