Disabling the auto radio seleciton and fixing a bug if it ever gets turned on The bug is that when printing you don't want to do the auto default selection stuff because it ends up calling into the DOM and changing the radios on the page. Bug 96367 r=timeless sr=attinasi a=dbaron